syntax = "proto3";

package claw.v1;

import "buf/validate/validate.proto";
import "claw/v1/nsfw.proto";
import "google/protobuf/timestamp.proto";

// Device represents a target device for image assignment
message Device {
  // Unique identifier for the device. This field is ignored during creation.
  int64 id = 1;

  // url friendly
  string slug = 2;

  // Display name for the device.
  string name = 3 [(buf.validate.field).string.min_len = 1];

  // Device screen height in pixels
  int32 height = 4 [(buf.validate.field).int32.gt = 0];

  // Device screen width in pixels
  int32 width = 5 [(buf.validate.field).int32.gt = 0];

  // Acceptable aspect ratio difference as float
  double aspect_ratio_difference = 6 [(buf.validate.field).double.gte = 0];

  // Template for filename generation (optional)
  optional string filename_template = 8;

  // Minimum image height in pixels
  uint32 image_min_height = 9 [(buf.validate.field).uint32.gt = 0];

  // Minimum image width in pixels
  uint32 image_min_width = 10 [(buf.validate.field).uint32.gt = 0];

  // Maximum image height in pixels
  uint32 image_max_height = 11 [(buf.validate.field).uint32.gt = 0];

  // Maximum image width in pixels
  uint32 image_max_width = 12 [(buf.validate.field).uint32.gt = 0];

  // Minimum image file size in bytes
  uint32 image_min_filesize = 13 [(buf.validate.field).uint32.gte = 0];

  // Maximum image file size in bytes
  uint32 image_max_filesize = 14 [(buf.validate.field).uint32.gt = 0];

  // NSFW content handling mode
  NSFWMode nsfw = 15;

  // Timestamp when device was created. This field is ignored during creation.
  google.protobuf.Timestamp created_at = 16;

  // Timestamp when device was last updated. This field is ignored during creation.
  google.protobuf.Timestamp updated_at = 17;

  // Timestamp when device was last active (e.g., last image assignment). This field is ignored during creation.
  google.protobuf.Timestamp last_active_at = 19;
}
