syntax = "proto3";

package claw.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

// Source represents a source of images
message Source {
  int64 id = 1;

  // Name of source (e.g., "reddit", "booru")
  string name = 2 [(buf.validate.field).string.min_len = 1];

  // Display name for the source
  string display_name = 3 [(buf.validate.field).string.min_len = 1];

  // Parameters for the source (JSON string or simple parameter)
  string parameter = 4 [(buf.validate.field).string.min_len = 1];

  // Number of items to look back when searching
  int32 countback = 5 [(buf.validate.field).int32.gte = 0];

  // Whether the source is disabled
  bool is_disabled = 6;

  // Timestamp of last run (optional)
  optional google.protobuf.Timestamp last_run_at = 7;

  // Timestamp when source was created
  google.protobuf.Timestamp created_at = 8;

  // Timestamp when source was last updated
  google.protobuf.Timestamp updated_at = 9;

  repeated SourceSchedule schedules = 10;
}

// SourceSchedule represents a schedule for a source
message SourceSchedule {
  // Unique ID of the schedule
  int64 id = 1;

  // Cron expression for the schedule
  string schedule = 3 [(buf.validate.field).string.min_len = 1];

  // Timestamp when schedule was created
  google.protobuf.Timestamp created_at = 4;
}
